tests/errors/factorial_negative.experr
factorial is not defined for negatives
